--- a/queryall-content-negotiation/src/test/resources/log4j.properties
+++ b/queryall-content-negotiation/src/test/resources/log4j.properties
@@ -4,12 +4,12 @@
 # is at the debug level. The value after the comma is the appender for the
 # root and we have given it the name R
 #
-log4j.rootLogger=DEBUG, R
+log4j.rootLogger=INFO, R
 
 log4j.appender.R=org.apache.log4j.ConsoleAppender
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%-5p - %d{dd/MM/yyyy HH:mm:ss} - %m%n
 
-log4j.logger.org.queryall=DEBUG
+log4j.logger.org.queryall=INFO
 
 
