--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -108,6 +108,12 @@
 			<version>${sesame.version}</version>
 			<type>jar</type>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>sesame-queryparser-serql</artifactId>
+					<groupId>org.openrdf.sesame</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
@@ -168,6 +174,13 @@
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-ext-rule-sparql</artifactId>
+			<version>${queryall.version}</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-ext-rule-spin</artifactId>
 			<version>${queryall.version}</version>
 			<type>jar</type>
 			<scope>test</scope>
