--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<queryall.version>1.3-SNAPSHOT</queryall.version>
 		<sesame.version>2.6.0</sesame.version>
-		<sesametools.version>1.6-SNAPSHOT</sesametools.version>
-		<slf4j.version>1.6.3</slf4j.version>
+		<sesametools.version>1.6</sesametools.version>
+		<slf4j.version>1.6.4</slf4j.version>
 	</properties>
 	<build>
 		<plugins>
