--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<version>7</version>
 	</parent>
 
-	<groupId>org.queryall</groupId>
+	<groupId>com.github.queryall</groupId>
 	<artifactId>queryall-parent</artifactId>
 	<version>1.3.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
