--- a/queryall-content-negotiation/pom.xml
+++ b/queryall-content-negotiation/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>queryall-parent</artifactId>
-		<groupId>org.queryall</groupId>
+		<groupId>com.github.queryall</groupId>
 		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>queryall-content-negotiation</artifactId>
@@ -17,7 +17,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.queryall</groupId>
+			<groupId>com.github.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
