--- a/queryall-ext-rule-owl/pom.xml
+++ b/queryall-ext-rule-owl/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>queryall-parent</artifactId>
-		<groupId>org.queryall</groupId>
+		<groupId>com.github.queryall</groupId>
 		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>queryall-ext-rule-owl</artifactId>
@@ -27,7 +27,7 @@
 			<version>2.3.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.queryall</groupId>
+			<groupId>com.github.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
