--- a/queryall-ext-provider-http/pom.xml
+++ b/queryall-ext-provider-http/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>queryall-parent</artifactId>
 		<groupId>com.github.queryall</groupId>
-		<version>1.3.2-SNAPSHOT</version>
+		<version>1.3.2</version>
 	</parent>
 	<artifactId>queryall-ext-provider-http</artifactId>
 	<name>queryall-ext-provider-http</name>
