--- a/queryall-lib-test/src/test/resources/log4j.properties
+++ b/queryall-lib-test/src/test/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.rootLogger=INFO, R
 
 log4j.appender.R=org.apache.log4j.ConsoleAppender
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%-5p - %d{dd/MM/yyyy HH:mm:ss} - %m%n
+log4j.appender.R.layout.ConversionPattern=[%d] %-5p (%c:%L) %m%n
 
 log4j.logger.org.deri.pipes=FATAL
 log4j.logger.org.openrdf=WARN
