--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -152,6 +152,11 @@
 			<artifactId>sesame-rio-n3</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-nquads</artifactId>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-trix</artifactId>
