--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@
         <junit.version>4.11</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <sesame.version>2.7.0-beta2-SNAPSHOT</sesame.version>
-        <sesamerioextensions.version>0.2</sesamerioextensions.version>
+        <sesame.version>2.7.0-beta2</sesame.version>
+        <sesamerioextensions.version>0.3</sesamerioextensions.version>
         <slf4j.version>1.7.2</slf4j.version>
     </properties>
     <prerequisites>
@@ -102,7 +102,7 @@
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
-                <version>1.2.16</version>
+                <version>1.2.17</version>
             </dependency>
             <dependency>
                 <groupId>org.openrdf.sesame</groupId>
@@ -350,7 +350,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12.4</version>
+                    <version>2.13</version>
                     <!-- Added test excludes for Abstract -->
                     <configuration>
                         <excludes>
@@ -429,30 +429,6 @@
             </plugin>
         </plugins>
     </reporting>
-    <repositories>
-        <repository>
-            <id>sonatype.snapshots</id>
-            <name>Sonatype snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>fortytwo.net</id>
-            <name>SesameTools Repository</name>
-            <url>http://fortytwo.net/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
     <profiles>
         <profile>
             <id>metadatanet-deploy</id>
